hphp/hack/test/typecheck/string_no_new.php
<?hh

function f() : void {
  new string();
  new string('123');
}
